[project]
name = "UAPML7B"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ilhamnw", email = "oii@yahoo.com"},
]
dependencies = ["streamlit>=1.41.1", "scikit-learn>=1.6.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
